@@ -3120,9 +3120,6 @@ BUGWK56060 LINUX X86_64 : fast/images/favicon-as-image.html = IMAGE+TEXT
 
 BUGCR75632 LINUX : svg/W3C-SVG-1.1/text-text-03-b.svg = CRASH PASS
 
-// I (antonm) am working on proper fix for it.  Temporary suppressing text differences.
-BUGWK55399 : fast/dom/StyleSheet/gc-inline-style-cssvalues.html = TEXT
-
 // Test changed in Wk r80743, throws an exception rather than returning 'true'
 BUGCR75740 : fast/js/regexp-test-null-string.html = FAIL
 
